--- a/ssis_app/templates/course_list.html
+++ b/ssis_app/templates/course_list.html
@@ -30,63 +30,9 @@
             <td>CCS</td>
             <td>
 
-                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
-                <a href="#" class="custom-delete-button">DELETE</a>
+                <a href="{{ url_for('course.course_edit') }}" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
+                <a href="{{ url_for('course.course_delete') }}" class="custom-delete-button">DELETE</a>
             
-            </td>
-        </tr>
-        <tr>
-            <td>BSCA</td>
-            <td>BACHELOR OF SCIENCE IN COMPUTER APPLICATIONS</td>
-            <td>CCS</td>
-            <td>
-                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
-                <a href="#" class="custom-delete-button">DELETE</a>
-            </td>
-        </tr>
-        <tr>
-            <td>BSIT</td>
-            <td>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</td>
-            <td>CCS</td>
-            <td>
-                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
-                <a href="#" class="custom-delete-button">DELETE</a>
-            </td>
-        </tr>
-        <tr>
-            <td>BSIT</td>
-            <td>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</td>
-            <td>CCS</td>
-            <td>
-                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
-                <a href="#" class="custom-delete-button">DELETE</a>
-            </td>
-        </tr>
-        <tr>
-            <td>BSIT</td>
-            <td>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</td>
-            <td>CCS</td>
-            <td>
-                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
-                <a href="#" class="custom-delete-button">DELETE</a>
-            </td>
-        </tr>
-        <tr>
-            <td>BSIT</td>
-            <td>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</td>
-            <td>CCS</td>
-            <td>
-                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
-                <a href="#" class="custom-delete-button">DELETE</a>
-            </td>
-        </tr>
-        <tr>
-            <td>BSIT</td>
-            <td>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</td>
-            <td>CCS</td>
-            <td>
-                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
-                <a href="#" class="custom-delete-button">DELETE</a>
             </td>
         </tr>
     </table>
