--- a/ssis_app/templates/edit_course.html
+++ b/ssis_app/templates/edit_course.html
@@ -13,9 +13,9 @@
 
 <div class="entity bg"></div>
 <div class="backicon"><a href="{{ url_for('course.course_list') }}"><img src="{{ url_for('static', filename='images/back-icon.png') }}"></a></div>
-<div class="entity heading">ADD COURSE</div>
+<div class="entity heading">EDIT COURSE INFORMATION</div>
 
-<!-- ADD COURSE FORM -->
+<!-- EDIT COURSE FORM -->
 <div class="inputBox code">
     <input type="text" required="required">
     <span>CODE</span>
