--- a/ssis_app/templates/student_list.html
+++ b/ssis_app/templates/student_list.html
@@ -36,33 +36,9 @@
             <td>FEMALE</td>
             <td>
 
-                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
-                <a href="#" class="custom-delete-button">DELETE</a>
+                <a href="{{ url_for('student.student_edit') }}" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
+                <a href="{{ url_for('student.student_delete') }}" class="custom-delete-button">DELETE</a>
             
-            </td>
-        </tr>
-        <tr>
-            <td>2021-2393</td>
-            <td>MARK FRANCIS</td>
-            <td>VENUS</td>
-            <td>CS</td>
-            <td>3RD YEAR</td>
-            <td>MALE</td>
-            <td>
-                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
-                <a href="#" class="custom-delete-button">DELETE</a>
-            </td>
-        </tr>
-        <tr>
-            <td>2021-0622</td>
-            <td>NANCY</td>
-            <td>SAYSON</td>
-            <td>CS</td>
-            <td>3RD YEAR</td>
-            <td>FEMALE</td>
-            <td>
-                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
-                <a href="#" class="custom-delete-button">DELETE</a>
             </td>
         </tr>
     </table>
