--- a/ssis_app/static/style.css
+++ b/ssis_app/static/style.css
@@ -254,7 +254,7 @@ nav li:hover {
 }
 
 /* add styles */
-.addentity.bg {
+.entity.bg {
     width: 1100px; 
     height: 500px; 
     background-color: white;
@@ -264,7 +264,25 @@ nav li:hover {
     left: 210px;
     position: absolute;
 }
-.addentityheading {
+.entity.heading {
+    top: 141px;
+    left: 300px;
+    position: absolute;
+}
+
+/* delete styles */
+.delete-entity.bg {
+    width: 500px; 
+    height: 300px; 
+    background-color: white;
+    box-shadow: 5px 5px 10px rgba(255, 132, 177, 0.5);
+    border-radius: 12px;
+    top: 110px;
+    left: 210px;
+    position: absolute;
+}
+
+.delete-entity.heading {
     top: 141px;
     left: 300px;
     position: absolute;
