--- a/ssis_app/templates/edit_student.html
+++ b/ssis_app/templates/edit_student.html
@@ -13,7 +13,7 @@
 
 <div class="entity bg"></div>
 <div class="backicon"><a href="{{ url_for('student.student_list') }}"><img src="{{ url_for('static', filename='images/back-icon.png') }}"></a></div>
-<div class="entity heading">ADD STUDENT</div>
+<div class="entity heading">EDIT STUDENT INFORMATION</div>
 
 <!-- ADD STUDENT FORM -->
 <div class="inputBox id">
