--- a/ssis_app/static/style.css
+++ b/ssis_app/static/style.css
@@ -260,13 +260,14 @@ nav li:hover {
     background-color: white;
     box-shadow: 5px 5px 10px rgba(255, 132, 177, 0.5);
     border-radius: 12px;
-    top: 110px;
-    left: 210px;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
     position: absolute;
 }
 .entity.heading {
     top: 141px;
-    left: 300px;
+    left: 315px;
     position: absolute;
 }
 
@@ -277,15 +278,39 @@ nav li:hover {
     background-color: white;
     box-shadow: 5px 5px 10px rgba(255, 132, 177, 0.5);
     border-radius: 12px;
-    top: 110px;
-    left: 210px;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -60%); 
     position: absolute;
 }
 
 .delete-entity.heading {
-    top: 141px;
-    left: 300px;
+    top: 33%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
     position: absolute;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.delete-text.body {
+    top: 43%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    position: absolute;
+    font-weight: bold;
+}
+
+.btn.delete-yes {
+    position: relative;
+    top: 390px;
+    left: 740px;
+}
+
+.btn.delete-no {
+    position: relative;
+    top: 390px;
+    left: 795px;
 }
 
 /* input box styles */
@@ -355,12 +380,12 @@ nav li:hover {
 /* icon in add forms */
 .sideicon {
     top: 185px;
-    left: 850px;
+    left: 860px;
     position: absolute;
 }
 .sideicon.student {
     top: 160px;
-    left: 895px;
+    left: 900px;
     position: absolute;
 }
 
