--- a/ssis_app/templates/add_college.html
+++ b/ssis_app/templates/add_college.html
@@ -16,7 +16,7 @@
 <div class="entity heading">ADD COLLEGE</div>
 
 <!-- ADD COLLEGE FORM -->
-<form action="/college/add" method="POST">
+<form action="/college/add/" method="POST">
     {{ college_form.csrf_token }}
     <div class="inputBox code">
         <input type="text" required="required" name="college_code">
